<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#281E28"
    tools:context=".MainActivity">


    <TextView
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="170dp"
        android:fontFamily="cursive"
        android:text="@string/create_on_account"
        android:textColor="#fdfdfd"
        android:textSize="25sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/user_login"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="text"
        android:textColorHint="#6a6a6a"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:textColor="#fdfdfd"
        android:hint="@string/enter_login" />

    <EditText
        android:id="@+id/user_email"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:textColorHint="#6a6a6a"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:textColor="#fdfdfd"
        android:hint="@string/enter_email" />

    <EditText
        android:id="@+id/user_pass"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="textPassword"
        android:textColorHint="#6a6a6a"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:textColor="#fdfdfd"
        android:hint="@string/enter_pass" />

    <Button
        android:id="@+id/button_reg"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:text="@string/registration"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="#5e4502"
        android:layout_gravity="center"
        android:backgroundTint="#e2a600"
        android:layout_marginTop="30dp"
        />

    <TextView
        android:id="@+id/link_to_auth"
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="120dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/login"
        android:textColor="#fdfdfd"
        android:textSize="17sp"
        android:textStyle="bold" />

</LinearLayout>